[package]
name = "rlox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
  "rlox-common"
]

[dependencies]
clap = { version = "3.2.5", features = ["derive"] }
rlox-common = { path = "rlox-common" }

[profile.release]
debug = true
