[package]
name = "rlox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
  "rlox_common",
  "rlox_parser"
]

[dependencies]
clap = { version = "3.2.5", features = ["derive"] }
strum = { version = "0.24", features = ["derive"] }
rlox_common = { path = "rlox_common" }
rlox_parser = { path = "rlox_parser" }

[profile.release]
debug = true
