[package]
name = "rlox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
  "rlox_common",
]

[dependencies]
clap = { version = "3.2.5", features = ["derive"] }
strum = { version = "0.24", features = ["derive"] }
strum_macros = "0.24"
rustc-hash = "1.1.0"
rlox_common = { path = "rlox_common" }

[profile.release]
debug = true
